fixed WAVE contrast

--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -205,7 +205,7 @@ nav button {
     text-align: center;
 	font-size: 1.5rem;
 	text-shadow: .25rem .25rem .75rem #4B496F;
-    color: #FCD135;
+    color: #100E39;
 }
 .overlayBtn {
     position: absolute;
